fix: header logo size on small-phone, hero responsive breakpoints

--- a/scss/components/header.scss
+++ b/scss/components/header.scss
@@ -130,7 +130,7 @@
     padding: 1rem 1.5rem;
 
     &__logo {
-      width: 4rem;
+      width: 8rem;
     }
 
     &__hamburger {
@@ -152,7 +152,7 @@
     padding: 0.75rem 1rem;
 
     &__logo {
-      width: 3.2rem;
+      width: 8rem; // tune this value up or down as needed
       height: auto;
       margin-right: 1rem;
     }
